# Leancoin

./: .gitignore  .prettierrc.json  Anchor.toml  README.md  package.json  rust-toolchain.toml
programs/LeanManagementToken/: Cargo.toml
programs/LeanManagementToken/src/: account.rs  context.rs  error.rs  error_codes.rs  lib.rs  utils.rs
scripts/: Dockerfile  run-docker-container.sh
tests/: LeanCoin.ts
tests/utils/: accounts.ts  pda.ts  time.ts
