[package]
name = "Leancoin"
version = "0.1.0"
description = "Contract to create and manage the Leancoin token"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "leancoin"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dev-dependencies]
test-case = "3.0.0"
solana-program = "1.15.2"
solana-program-test = "1.15.2"
solana-sdk = "1.15.2"
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }

[dependencies]
anchor-lang = "0.27.0"
anchor-spl = "0.27.0"